--- a/Курсовая работа/KR.Web/Pages/ErrorDelete.razor
+++ b/Курсовая работа/KR.Web/Pages/ErrorDelete.razor
@@ -5,7 +5,7 @@
 @attribute [Authorize]
 
 <div class="col-md-12">
-    <RadzenLabel Text="Ошибка при удалении записи, проверьте наличие дочерних записей" Component="Name" style="width: 100%; text-align:center">
+    <RadzenLabel Text="Ошибка при удалении записи, проверьте наличие и содержание дочерних записей" Component="Name" style="width: 100%; text-align:center">
     </RadzenLabel>
     <div class="row footer">
         <div>
