--- a/Курсовая работа/KR.Web/Pages/Profile.razor
+++ b/Курсовая работа/KR.Web/Pages/Profile.razor
@@ -13,6 +13,9 @@
 @using Microsoft.AspNetCore.Authorization
 @attribute [Authorize]
 
+<PageTitle>Профиль</PageTitle>
+
+
 <RadzenContent Container="main">
     <ChildContent>
 
