--- a/Курсовая работа/KR.Web/Pages/PurchaseAgreements/EditPurchaseAgreement.razor
+++ b/Курсовая работа/KR.Web/Pages/PurchaseAgreements/EditPurchaseAgreement.razor
@@ -42,7 +42,7 @@
                         </div>
                         <div style="margin-bottom: 1rem" class="flex-column">
                             <div>
-                                <RadzenLabel Text="Дата поставки" Component="Date" style="width: 100%">
+                                <RadzenLabel Text="Дата договора поставки" Component="Date" style="width: 100%">
                                 </RadzenLabel>
                             </div>
                             <div>
