--- a/Курсовая работа/KR.Web/Pages/PurchaseAgreements/PurchaseAgreementPage.razor
+++ b/Курсовая работа/KR.Web/Pages/PurchaseAgreements/PurchaseAgreementPage.razor
@@ -26,7 +26,7 @@
                                 </RadzenDataGridColumn>
                                 <RadzenDataGridColumn TItem="PurchaseAgreement" Property="Agreement_Code" Title="Номер договора">
                                 </RadzenDataGridColumn>
-                                <RadzenDataGridColumn TItem="PurchaseAgreement" Property="Date_Of_Purchase" Title="Дата закупки">
+                                <RadzenDataGridColumn TItem="PurchaseAgreement" Property="Date_Of_Purchase" Title="Дата договора">
                                 </RadzenDataGridColumn>
 
                         <RadzenDataGridColumn TItem="PurchaseAgreement" Filterable="false" Sortable="false" Width="70px" TextAlign="TextAlign.Center">
