--- a/Курсовая работа/KR.Web/Pages/_Layout.cshtml
+++ b/Курсовая работа/KR.Web/Pages/_Layout.cshtml
@@ -21,12 +21,12 @@
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
+            Произошла неизвестная ошибка, пожалуйста перезагрузите страницу
         </environment>
         <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
+            Произошла неизвестная ошибка, пожалуйста перезагрузите страницу
         </environment>
-        <a href="" class="reload">Reload</a>
+        <a href="" class="reload">Перезагрузить</a>
         <a class="dismiss">🗙</a>
     </div>
 
