--- a/Курсовая работа/KR.Web/Pages/Orders/AddOrder.razor
+++ b/Курсовая работа/KR.Web/Pages/Orders/AddOrder.razor
@@ -1,6 +1,6 @@
 ﻿@layout MainLayout
 
-@attribute [Authorize(Roles="Администратор, Отдел кадров")]
+@attribute [Authorize(Roles="Администратор, Отдел продаж")]
 
 <RadzenContent Container="main">
     <ChildContent>
