--- a/Курсовая работа/KR.Web/Pages/Orders/EditOrder.razor
+++ b/Курсовая работа/KR.Web/Pages/Orders/EditOrder.razor
@@ -1,7 +1,7 @@
 ﻿@page "/edit-order/{Id_Order}"
 @layout MainLayout
 
-@attribute [Authorize(Roles = "Администратор, Отдел кадров")]
+@attribute [Authorize(Roles = "Администратор, Отдел продаж")]
 
 <RadzenContent Container="main">
     <ChildContent>
